# ibkr-flex-client

./: CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
src/ibkr_flex_client/: __init__.py  client.py  errors.py  statement.py
tests/: test_client.py  test_statement.py
